--- a/api/templates/api/redoc.html
+++ b/api/templates/api/redoc.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
   <head>
     <title>ReDoc</title>
     <!-- needed for adaptive design -->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet">
+    <link href="{% static 'css/redoc_fonts.css' %}" rel="stylesheet">
     <!-- ReDoc doesn't change outer page styles -->
     <style>
       body {
@@ -16,6 +17,6 @@
   </head>
   <body>
     <redoc spec-url='{% url schema_url %}'></redoc>
-    <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
+    <script src="{% static 'js/redoc.standalone.js' %}"> </script>
   </body>
 </html>
